# tree-signal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLI_SPEC.md  COLOR_PALETTE_FEATURE.md  CONFIG.md  DOCKER.md  Dockerfile  LAYOUT_UX_PROBLEMS.md  README.md  TAB_MODE_PLAN.md  colour-pallete.py  config.toml.example  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  source.sh  tree_signal_spec.md  unraid-template.xml
cli/: README.md  test-config.toml  tree-signal  tree-signal.sh
cli/.claude/: README.md  settings.json  settings.local.json.example
cli/.claude/hooks/: post_tool_use.py  session_end.py  session_start.py  tree_signal_emit.py  user_prompt_submit.py
cli/examples/: advanced.toml  bash-simple.conf  json-logs.toml  simple.toml
cli/tests/: test_config.py  test_router.py
cli/tree_signal_cli/: __init__.py  config.py  main.py  router.py  sender.py
client/: README.md  app.js  index.html  styles.css
scripts/: README.md  seed_demo.py  send.py  send_message.py
src/tree_signal/: __init__.py
src/tree_signal/api/: __init__.py  main.py  schemas.py
src/tree_signal/core/: __init__.py  color_palette.py  config.py  models.py  tree_service.py
src/tree_signal/layout/: __init__.py  generator.py
src/tree_signal/layouts/: config.py
src/tree_signal/layouts/profiles/: compact.yaml  minimal.yaml  spacious.yaml
tests/api/: test_control.py  test_health.py  test_layout.py  test_messages.py
tests/core/: test_models.py  test_tree_service.py
tests/layout/: test_generator.py
