[project]
name = "tree-signal"
version = "0.1.0"
description = "Treemap-based hierarchical layout prototype."
authors = [{ name = "Tree Signal Maintainers" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<0.112",
    "uvicorn[standard]>=0.27,<0.28",
    "pydantic>=2.6,<2.7",
    "aiosqlite>=0.20,<0.21",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
known_first_party = ["tree_signal"]
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["tree_signal"]
plugins = []

[dependency-groups]
dev = [
    "httpx>=0.26,<0.27",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "mypy>=1.8,<1.9",
    "black>=24.2,<25.0",
    "isort>=5.13,<5.14",
]

[tool.uv]
cache-dir = ".uv-cache"
